style.css
*{
    font-family: 'Roboto Condensed', sans-serif;
}
body{
    margin:0;
    font-size:0;
}
.league_landing{
    height: 50px;
    margin:auto;
    margin-bottom: 3%;
    text-align: center;
    width: 80%;
    max-width:900px;
    min-width: 550px;
}
.date_landing {
    height: 50px;
    margin:auto;
    text-align: center;
    width: 80%;
    max-width:900px;
    min-width: 550px;
}
.sched_landing{
    font-size: 20px;
    margin:auto;
    margin-top: 10%;
    margin-bottom: 10%;
    width:80%;
    margin-top:-4px;
    max-width:900px;
    min-width: 550px;
    position: relative;
    border: 4px solid black;
    box-sizing: border-box;
    min-height: 100px;
}

.menu_button{
    margin: 10px;
    z-index: 5;
    height: 35px;
}
.menu_button:hover{
    cursor: pointer;
}

.menu{
    top:0px;
    left:0px;
    position: fixed;
    background-color: white;
    width: 40vw;
    min-width: 315px;
    max-width: 350px;
    height: 100vh;
    z-index: 10;
    border-right: 3px black solid;
    background-color: white;
}

.menu_close{
    top:0px;
    right:0px;
    position: fixed;
    height: 100%;
    width: 100%;
    z-index: 5;
    background-color: rgba(0,0,0,.5);
}

.container {
    height:95vh;
    width: 100vw;
    max-width: 92vw;
}
.container2 {
    font-size: 20px;
    top: 0;
    left:0;
    z-index: 10;
}
.dates, .dates_history{
    display:inline-block;
    border: solid 4px black;
    height: 100%;
    width: 32%;
    font-size: 25px;
    line-height: 40px;
    background-color: white;
    color: black;
    margin-right: -4px;
}
.dates:hover{
    cursor: pointer;
}

.league_button, .league_button_history{
     display: inline-block;
     font-family: 'Khand', sans-serif;
     font-size: 2.6vw;
    margin-left: 25px;
    margin-right: 25px;
 }
.league_button:hover{
    cursor: pointer;
    font-weight: bold;
    color: deepskyblue;
}

.league_button_bold{
    font-size: 20px;
    display: inline-block;
    font-family: 'Khand', sans-serif;
    font-size: 3.2vw;
    font-weight: bold;
    margin-left: 3.5%;
}
.logo{
    height: 75px;
    position: fixed;
    top: 15px;
    right:15px;
    vertical-align: bottom;
}
.logo_menu{
    height: 35px;
    width: 35px;
    color: deepskyblue;
    background-color: black;
    border-radius: 100%;
    font-size: 15px;
    display: inline-block;
    text-align: center;
    line-height: 35px;
    vertical-align: bottom;
    margin-bottom:10px;
}
.home_img {
    height: 40px;
}

.away_img {
    height: 40px;
}
/*.away_img{*/
    /*display: inline-block;*/
    /*float: right;*/
    /*height: 100px;*/
/*}*/
.game, .game_history{
    font-size: 20px;
    border: solid 1px black;
    border-bottom: solid 2px black;
    padding: 2%;
    background-color: white;
    position:relative;
    overflow: auto;
}

.game:hover{
    cursor: pointer;
}
.bet{
    border: solid 2px black;
    background-color: lightgrey;
    text-align: center;
    transition: all linear 0.15s;
    overflow:hidden;
    height: 375px;
}
.started{
    height: 240px;
}

.game_date{
    background-color: white;
    display:block;
    text-align: right;
    font-family: 'Concert One', cursive;
    margin-bottom: 10px;
}
.teams_playing{
    font-size: 30px;
}

.teams_playing_div {
    text-align: left;
}

.modal-content {
    text-align: center;
    font-size: 4vw;
}
.modal-body{
    border: 5px solid deepskyblue;
    border-radius: 0;
}
.confirm-mdl, .cancel-mdl {
    margin: 10px;
}
.spread_bet{
    width: 35%;
    background-color: white;
    font-size: 25px;
    margin: 15px 35px;
    display: inline-block;
    text-align: center;
    border: 3px solid deepskyblue;
    border-radius: 0;
    color: deepskyblue;
}

.spread_bet_fake{
    opacity: .5;
    pointer-events: none;
}
.spread_bet_fake:hover{
    cursor: default;
}

.confirm_button{
    width: 80%;
    font-size: 50px;
    text-align: center;
    border: 5px solid deepskyblue;
    margin: 20px auto;
    color: deepskyblue;
    border-radius: 0;
    background-color:white;
}

.selected{
    background-color: deepskyblue;
    color: white;
    font-weight: bold;
}

.selected_date{
    background-color: black;
    color: deepskyblue;
    font-weight: bold;
    vertical-align: top;
}

.menu_option{
    border-bottom: solid black 2px;
    display: block;
    padding: 2.5vh;
    background-color: white;
}
.menu_option_top{
    border-bottom: solid black 2px;
    border-top:solid white 1px;
    display: block;
    padding: 2.5vh;
    background-color: white;
}

.menu_option_logout{
    border-top: solid white 2px;
    border-bottom: solid black 2px;
    display: block;
    padding: 2.5vh;
    background: black;
    color: white;
    margin-top: -6px;
}
.menu_option_logout:hover{
    border-bottom: solid black 2px;
    padding: 2.5vh;
    color: deepskyblue;
}

.menu_option, a{
    color: black;
    font-size: 3vh;
}

.account_info{
    padding-bottom: 10vh;
    width:100%;
    background-color: black;
    color:deepskyblue;
    border-bottom: white 2px solid;
}
a:hover{
    color:deepskyblue;
    text-decoration:none;
}
.menu_option:hover{
     background-color:black;
 }

.menu_option_top:hover{
    background-color:black;
}

.confirm_button_fake{
    width: 80%;
    font-size: 50px;
    text-align: center;
    border: 5px solid deepskyblue;
    border-radius: 0;
    margin: 20px auto;
    color: deepskyblue;
    background-color:white;
    opacity: .3;
}
* {
    outline: none;
}

.ng-hide {
    height: 0;
}


.bet_made_lander{
    float: right;
    vertical-align: bottom;
    height: 30px;
}

.bet_made{
    border: 2px solid deepskyblue;
    border-radius: 100%;
    color: deepskyblue;
    font-weight: bold;
    display: inline-block;
    height: 30px;
    width: 30px;
    line-height: 28px;
    font-size: 15px;
    text-align: center;
}

.faq{
    font-size: 20px;
}
/* ... */

